render image to video problem #26943

Closed
opened 2011-04-15 09:54:59 +02:00 by cotcot · 9 comments

%%%The quality of the video rendered from an image is not OK. It is unsharp and the image jumps up and down a few pixels during play back.
The problem is reproducable.

  1. open blender direct from the downloaded and extracted binary
  2. change to Video editing screen layout
  3. change render settings : Output : H264; Encoding Presets : H264 ; framerate to 25 fps
  4. load image
  5. change image length to some 200 frames
  6. render animation (frame 1 to frame 100)

Same happens on other computer.

Same happens with other render settings (mpeg)

Quality is OK using Xvid

Same with other pictures than the one attached.

  CPU: Intel Pentium SU4100
  RAM: 2048 MB
  GFX: Intel GMA 4500MHD (up to 796 MB DVMT)
  OS: Ubuntu 10.10
  Drivers: i915
  Blender: 2.57 (2.49, 2.54, 2.55, 2.56)

CPU: AMD 64 x2 3800+

  RAM: 3072 MB
  GFX: Gforce 7200 GS
  OS: Ubuntu 10.04
  Drivers: nvidea 173
  Blender: 2.57 (also 2.49, 2.54, 2.55, 2.56)

Attachments : source picture and resulting video.
%%%

%%%The quality of the video rendered from an image is not OK. It is unsharp and the image jumps up and down a few pixels during play back. The problem is reproducable. 1. open blender direct from the downloaded and extracted binary 2. change to Video editing screen layout 3. change render settings : Output : H264; Encoding Presets : H264 ; framerate to 25 fps 4. load image 5. change image length to some 200 frames 6. render animation (frame 1 to frame 100) Same happens on other computer. Same happens with other render settings (mpeg) Quality is OK using Xvid Same with other pictures than the one attached. ``` CPU: Intel Pentium SU4100 RAM: 2048 MB GFX: Intel GMA 4500MHD (up to 796 MB DVMT) OS: Ubuntu 10.10 Drivers: i915 Blender: 2.57 (2.49, 2.54, 2.55, 2.56) ``` CPU: AMD 64 x2 3800+ ``` RAM: 3072 MB GFX: Gforce 7200 GS OS: Ubuntu 10.04 Drivers: nvidea 173 Blender: 2.57 (also 2.49, 2.54, 2.55, 2.56) ``` Attachments : source picture and resulting video. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%I've also noticed really large images compress very badly with ffmpeg.

assigning to Peter.%%%

%%%I've also noticed really large images compress very badly with ffmpeg. assigning to Peter.%%%
Author

%%%Rendering directly with ffmpeg ( ffmpeg -r 10 -b 8000 -i %02d.JPG test1800.mp4) works fine.
Rendering with othe NLE (tried kdenlive and openshot) also give good results.%%%

%%%Rendering directly with ffmpeg ( ffmpeg -r 10 -b 8000 -i %02d.JPG test1800.mp4) works fine. Rendering with othe NLE (tried kdenlive and openshot) also give good results.%%%
Author

%%%Reducing the image with gimp (scale) to 1440x1080 before rendering to 1920x1080 or 1440x1080 gives the same bad quality.%%%

%%%Reducing the image with gimp (scale) to 1440x1080 before rendering to 1920x1080 or 1440x1080 gives the same bad quality.%%%

%%%Nick, can you please check the very recent 2.61beta build (http://download.blender.org/release/Blender2.61/) ? There were several major things changed in ffmpeg code in blender, so hopefully your issue is resolved.%%%

%%%Nick, can you please check the very recent 2.61beta build (http://download.blender.org/release/Blender2.61/) ? There were several major things changed in ffmpeg code in blender, so hopefully your issue is resolved.%%%
Author

%%%Sergey

Thanks for your reaction.
I have tried your suggestion. Unfortunately the result did not change.
It is even worse. XVID was good before but shows now the same effect
(jumping up and down a few pixels) as for the H264, especially on green
from trees, plant, grass ... . The H264 gave a very small file (some 100 kB instead of about 10 MB for 10 seconds and 3 pictures) and a highly pixelized playback with similar render settings as previous tests.
Same pictures on kdenlive and openshot on the same computer render
correctly.
Maybe it would make thinks clearer if somebody else could confirm (or deny) the problem to make sure that it is not only me.
%%%

%%%Sergey Thanks for your reaction. I have tried your suggestion. Unfortunately the result did not change. It is even worse. XVID was good before but shows now the same effect (jumping up and down a few pixels) as for the H264, especially on green from trees, plant, grass ... . The H264 gave a very small file (some 100 kB instead of about 10 MB for 10 seconds and 3 pictures) and a highly pixelized playback with similar render settings as previous tests. Same pictures on kdenlive and openshot on the same computer render correctly. Maybe it would make thinks clearer if somebody else could confirm (or deny) the problem to make sure that it is not only me. %%%

%%%That;s because of x264-related settings sending to FFmpeg. Thay aren't actually lossless. Added option to switch this codec to lossless mode.
There's still room for improvements like allow to edit from the interface that "expert" settings currently hardcoded in the code, but it's just another story...

Option is commited to svn rev43353.%%%

%%%That;s because of x264-related settings sending to FFmpeg. Thay aren't actually lossless. Added option to switch this codec to lossless mode. There's still room for improvements like allow to edit from the interface that "expert" settings currently hardcoded in the code, but it's just another story... Option is commited to svn rev43353.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

%%%Sergey,

Thanks for adding the lossless option. I have tried it with the svn daily built (43587) and the result is very good with the lossless option thicked after having selected h264 in the encoder presets.%%%

%%%Sergey, Thanks for adding the lossless option. I have tried it with the svn daily built (43587) and the result is very good with the lossless option thicked after having selected h264 in the encoder presets.%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#26943
No description provided.