Added Lossless Output option for h264 codec.

This will fix #26943: render image to video problem